# scupt-fuzzy

./: Cargo.toml  README.md
src/: event_gen.rs  event_sequence.rs  fuzzy.rs  fuzzy_client.rs  fuzzy_command.rs  fuzzy_driver.rs  fuzzy_event.rs  fuzzy_generator.rs  fuzzy_server.rs  fuzzy_setting.rs  initializer.rs  lib.rs  server_config.rs
